# Min-Sum-Vitis-QEC

./: README.md  compute_check_to_value_msg.h  compute_row_operations.cpp  compute_row_operations.h  compute_row_operations_tb.cpp  hls_krnl_compute_check_to_value_msg.cpp  hls_tb_compute_check_to_value_msg.cpp  input.txt
_ide/: .peers.ini  version.ini  workspace_journal.py  workspace_journal_4856.py  workspace_journal_7469.py
hls_krnl_compute_check_to_value_msg/: compile_commands.json  hls_config.cfg  vitis-comp.json
hls_krnl_compute_check_to_value_msg/.cache/clangd/index/: compute_check_to_value_msg.h.B739E645AC1D7340.idx  hls_krnl_compute_check_to_value_msg.cpp.91A9ABB5A0501E0A.idx  hls_tb_compute_check_to_value_msg.cpp.4B36EC4AE3478DCE.idx
hls_krnl_compute_check_to_value_msg/compute_check_to_value/: compute_check_to_value.hlscompile_summary  compute_check_to_value.hlsrun_csim_summary  vitis-comp.json
hls_krnl_compute_check_to_value_msg/compute_check_to_value/hls/: config.cmdline  hls_data.json  kernel.xml
hls_krnl_compute_check_to_value_msg/compute_check_to_value/hls/.autopilot/db/: a.g.2.bc  a.g.2.prechk.bc  a.g.ld.0.bc  a.g.ld.0.bc.clang.reflow.diag.yml  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.o.1.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  a.pp.bc  all.directive.json  burst.xml  (+78 more)
hls_krnl_compute_check_to_value_msg/compute_check_to_value/hls/impl/misc/drivers/compute_check_to_value_v1_0/src/: CMakeLists.txt  Makefile  xcompute_check_to_value.c  xcompute_check_to_value.h  xcompute_check_to_value_hw.h
hls_krnl_compute_check_to_value_msg/compute_check_to_value/reports/: hls_compile.rpt  v++_compile_compute_check_to_value_guidance.html
hls_krnl_compute_check_to_value_msg/compute_check_to_value/reports/.db/: v++_compile_compute_check_to_value_guidance.pb3
krnl_row_operations/: compile_commands.json  hls_config.cfg  vitis-comp.json
krnl_row_operations/.cache/clangd/index/: compute_row_operations.cpp.8F3DA2C0B0C19A57.idx  compute_row_operations.cpp.A6419623AE08EF16.idx  compute_row_operations.h.2E74211E12D4D39A.idx  compute_row_operations_tb.cpp.0644933FB24917B4.idx  compute_row_operations_tb.cpp.25484DD84A7E5152.idx
krnl_row_operations/krnl_row_operations/: krnl_row_operations.hlscompile_summary  krnl_row_operations.hlsrun_csim_summary  vitis-comp.json
krnl_row_operations/krnl_row_operations/hls/: config.cmdline  hls_data.json  kernel.xml
krnl_row_operations/krnl_row_operations/hls/.debug/: compute_row_operations.protoinst
krnl_row_operations/krnl_row_operations/hls/impl/misc/drivers/compute_row_operations_v1_0/src/: CMakeLists.txt  Makefile  xcompute_row_operations_linux.c  xcompute_row_operations_sinit.c
krnl_row_operations/krnl_row_operations/reports/: v++_compile_krnl_row_operations_guidance.html
krnl_row_operations/krnl_row_operations/reports/.db/: v++_compile_krnl_row_operations_guidance.pb3
(+249 files in other folders)
